[tool.poetry]
name = "reflex-pagination"
version = "0.1.0"
description = ""
authors = ["Andreas Eismann <a.eismann@senbax.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.5.3"


[tool.poetry.group.dev.dependencies]
basedpyright = "^1.12.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
